log/build_2024-10-22_11-40-59/my_first_package/stderr.log
  File "/home/hun/ros2_study/install/my_first_package/lib/python3.10/site-packages/my_first_package/my_subscriber.py", line 9
    		self subscription = self.create_subscription(
    		     ^^^^^^^^^^^^
SyntaxError: invalid syntax

